apps/paperless-ngx/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file /mnt/d/DEV/k3s/paperless-kompose/docker-compose.yml convert
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: broker
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: broker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file /mnt/d/DEV/k3s/paperless-kompose/docker-compose.yml convert
        kompose.version: 1.29.0 (997957870)
      creationTimestamp: null
      labels:
        io.kompose.network/paperless-kompose-default: "true"
        io.kompose.service: broker
    spec:
      containers:
        - image: docker.io/library/redis:7
          name: broker
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: redisdata
      restartPolicy: Always
      volumes:
        - name: redisdata
          persistentVolumeClaim:
            claimName: redisdata
status: {}
