apps/paperless-ngx/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file /mnt/d/DEV/k3s/paperless-kompose/docker-compose.yml convert
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file /mnt/d/DEV/k3s/paperless-kompose/docker-compose.yml convert
        kompose.version: 1.29.0 (997957870)
      creationTimestamp: null
      labels:
        io.kompose.network/paperless-kompose-default: "true"
        io.kompose.service: webserver
    spec:
      containers:
        - env:
            - name: PAPERLESS_DBHOST
              value: db
            - name: PAPERLESS_REDIS
              value: redis://broker:6379
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          livenessProbe:
            exec:
              command:
                - curl
                - -fs
                - -S
                - --max-time
                - "2"
                - http://localhost:8000
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          name: webserver
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
            - mountPath: /usr/src/paperless/export
              name: webserver-claim2
            - mountPath: /usr/src/paperless/consume
              name: webserver-claim3
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: webserver-claim2
          persistentVolumeClaim:
            claimName: webserver-claim2
        - name: webserver-claim3
          persistentVolumeClaim:
            claimName: webserver-claim3
status: {}
